# onchain-cli

./: CONTRIBUTING.md  README.md
evmcli/: Cargo.toml
evmcli/src/: cli.rs  errors.rs  main.rs
evmcli/src/commands/: abi.rs  bench.rs  explorer.rs  trace.rs  transfers.rs
evmcli/src/rpc/: detect.rs
